--- a/css/main.css
+++ b/css/main.css
@@ -1,32 +1,34 @@
 @charset "utf-8";
 
-#wrap{}
+#wrap {}
 
-#header{
+#header {
     width: 100%;
     height: 113px;
     /* background-color: antiquewhite; */
     position: absolute;
 }
-.head_inner{
+
+.head_inner {
     width: 1200px;
     margin: 0 auto;
     /* background:#ddd; */
 }
 
-.head_top_menu{
+.head_top_menu {
     height: 48px;
     /* background-color: blueviolet; */
 }
-.head_top_menu ul{
+
+.head_top_menu ul {
     text-align: right;
 }
 
-.head_top_menu ul li{
+.head_top_menu ul li {
     display: inline-block;
 }
 
-.head_top_menu ul li a{
+.head_top_menu ul li a {
     display: block;
     line-height: 48px;
     padding: 0 10px;
@@ -35,35 +37,38 @@
     font-weight: bold;
 }
 
-.gnb{
+.gnb {
     height: 65px;
     /* background-color: aquamarine; */
 }
 
-.logo{float: left;
+.logo {
+    float: left;
     padding: 10px 0;
 }
 
-.logo a{
+.logo a {
     display: block;
     width: 112px;
     height: 45px;
-    background: url('../img/ico-zeus-logo.png') no-repeat ;
+    background: url('../img/ico-zeus-logo.png') no-repeat;
     /* '../img/ico-zeus-logo.png 112 * 90 */
     background-position: center top;
     text-indent: -9999px;
 }
 
-.nav{float: right;}
+.nav {
+    float: right;
+}
 
-.nav ul{}
+.nav ul {}
 
-.nav ul li{
+.nav ul li {
     display: inline-block;
     margin-left: 15px;
 }
 
-.nav ul li a{
+.nav ul li a {
     display: block;
     line-height: 65px;
     padding: 0 10px;
@@ -72,59 +77,62 @@
     color: white;
 }
 
-#header:hover {background-color: white;}
+#header:hover {
+    background-color: white;
+}
 
-#header:hover .logo a{
+#header:hover .logo a {
     background-position: center bottom;
 }
 
-#header:hover .head_top_menu a{
+#header:hover .head_top_menu a {
     color: #888;
 }
 
-#header:hover .nav a{
+#header:hover .nav a {
     color: #333;
 }
 
 /* container 영역 */
-#container{
+#container {
     width: 1920px;
     margin: 0 auto;
 }
 
 /* img_slide 영역 */
-.img_slide{
+.img_slide {
     height: 710px;
 }
 
-.img_slide a{}
-.img_slide a img{}
+.img_slide a {}
+
+.img_slide a img {}
 
 
 /* ZEUS 클래식 여행 영역 */
 
-.classic{
+.classic {
     padding-top: 80px;
     overflow: hidden;
     background-image: linear-gradient(#fff 0%, #fff 80%, #eee 80%, #eee 100%);
 }
 
-.classic h2{
+.classic h2 {
     text-align: center;
     font-size: 30px;
     margin-bottom: 50px;
 }
 
-.classic_list{
+.classic_list {
     text-align: center;
 }
 
-.classic_list li{
+.classic_list li {
     display: inline-block;
     margin: 0 10px;
 }
 
-.classic_list li a{
+.classic_list li a {
     display: block;
     padding: 5px 0;
     font-size: 16px;
@@ -132,17 +140,18 @@
     border-bottom: 2px solid white;
 }
 
-.classic_list li a:hover{
+.classic_list li a:hover {
     border-bottom: 2px solid hotpink;
 }
 
-.clssic_wrap{
+.clssic_wrap {
     width: 1200px;
     margin: 50px auto 0;
 }
-.clssic_wrap ul{}
 
-.clssic_wrap ul li{
+.clssic_wrap ul {}
+
+.clssic_wrap ul li {
     float: left;
     width: 384px;
     height: 520px;
@@ -153,14 +162,15 @@
     overflow: hidden;
 }
 
-.clssic_wrap ul li a{
+.clssic_wrap ul li a {
     display: block;
     width: 100%;
     height: 100%;
 }
 
-.clssic_wrap ul li a .top{
-    width: 60px;height: 70px;
+.clssic_wrap ul li a .top {
+    width: 60px;
+    height: 70px;
     background-color: black;
     color: white;
     text-align: center;
@@ -168,124 +178,134 @@
     padding-top: 10px;
     margin-left: 50px;
 }
-.clssic_wrap ul li a .top span{
+
+.clssic_wrap ul li a .top span {
     font-size: 12px;
     display: block;
     text-transform: uppercase;
 }
 
-.clssic_wrap ul li a .c_txt{
+.clssic_wrap ul li a .c_txt {
     width: 345px;
     height: 246px;
     background-color: transparent;
     padding: 24px 15px;
     color: white;
     position: absolute;
-    left:50%;top: 420px;
+    left: 50%;
+    top: 420px;
     transform: translateX(-50%);
     transition: all 0.5s;
 }
 
-.clssic_wrap ul li a:hover .c_txt{
+.clssic_wrap ul li a:hover .c_txt {
     top: 200px;
     background-color: white;
 }
 
 
 
-.clssic_wrap ul li a .c_txt h3{
+.clssic_wrap ul li a .c_txt h3 {
     font-size: 20px;
     line-height: 1.8;
     margin-bottom: 10px;
 }
-.clssic_wrap ul li a .c_txt p{
-    line-height: 1.5;    
+
+.clssic_wrap ul li a .c_txt p {
+    line-height: 1.5;
     margin-bottom: 20px;
     /* opacity: 0; */
     display: none;
 
 }
-.clssic_wrap ul li a .c_txt p.price{
+
+.clssic_wrap ul li a .c_txt p.price {
     font-size: 30px;
     position: absolute;
     bottom: 0px;
     left: 20px;
 }
-.clssic_wrap ul li a .c_txt p.price span{
+
+.clssic_wrap ul li a .c_txt p.price span {
     font-size: 20px;
 }
 
 
-.clssic_wrap ul li a:hover .c_txt h3{
+.clssic_wrap ul li a:hover .c_txt h3 {
     color: #333;
 }
 
-.clssic_wrap ul li a:hover .c_txt p{
+.clssic_wrap ul li a:hover .c_txt p {
     /* opacity: 1; */
     display: block;
     color: #666;
 }
-.clssic_wrap ul li a:hover .c_txt p.price{
+
+.clssic_wrap ul li a:hover .c_txt p.price {
     color: #000
 }
 
-.c_wrap_01{
+.c_wrap_01 {
     background-image: url('../img/classic01.jpg');
 }
-.c_wrap_02{
+
+.c_wrap_02 {
     margin: 0 24px;
     background-image: url('../img/classic02.jpg');
 }
-.c_wrap_03{
+
+.c_wrap_03 {
     background-image: url('../img/classic03.jpg');
 }
 
 /* 스페셜 영역 */
 
-.s_wrap_01{
+.s_wrap_01 {
     background-image: url('../img/special01.jpg');
 }
-.s_wrap_02{
+
+.s_wrap_02 {
     background-image: url('../img/special02.jpg');
     margin: 0 24px;
 }
-.s_wrap_03{
+
+.s_wrap_03 {
     background-image: url('../img/special03.jpg');
 }
 
 
 /* 공지사항 영역 */
 
-.notice{
+.notice {
     width: 100%;
-    padding: 50px 0;
+    padding: 50px 0 100px;
     overflow: hidden;
 }
 
-.notice ul{
+.notice ul {
     width: 1200px;
     margin: 0 auto;
 }
 
-.notice ul li{
+.notice ul li {
     float: left;
     width: calc(100% / 4);
     text-align: center;
     border-right: 1px dotted gray;
 }
 
-.notice ul li:last-child{
+.notice ul li:last-child {
     border-right: none !important;
 }
 
-.notice ul li a{
+.notice ul li a {
     /* border: 1px solid red; */
     display: block;
     margin-bottom: 10px;
 
 }
 
-.notice ul li span{
+.notice ul li span {
     display: block;
     width: 32px;
     height: 34px;
@@ -296,20 +316,90 @@
 }
 
 
-.notice ul li p{
+.notice ul li p {
     line-height: 1.7;
 }
 
-.notice ul li span.n_1{}
-.notice ul li span.n_2{
+.notice ul li span.n_1 {}
+
+.notice ul li span.n_2 {
     background-position: -235px -253px;
 }
-.notice ul li span.n_3{
+
+.notice ul li span.n_3 {
     background-position: -270px -253px;
 }
-.notice ul li span.n_4{
+
+.notice ul li span.n_4 {
     background-position: -301px -253px;
 }
 
+/* footer 영역 */
+#footer {
+    width: 1920px;
+    margin: 0 auto;
+    border-top: 2px solid #ddd;
+}
 
+.foot_inner {
+    width: 1200px;
+    margin: 0 auto;
+    padding: 30px 0;
+    /* border: 1px solid red; */
+    position: relative;
+}
 
+.foot_menu {
+    float: left;
+    font-size: 12px;
+}
+
+.foot_menu li {
+    display: inline-block;
+}
+
+.foot_menu li a {
+    display: block;
+    padding: 5px;
+}
+.foot_menu li:nth-child(1)  a{
+    padding-left:0 !important ;
+}
+
+.foot_tel {
+    float: right;
+    font-size: 12px;
+    margin-right: 300px;
+}
+
+.hana {
+    clear: both;
+    padding-top: 20px;
+}
+
+.hana li,
+.address li,
+.data li {
+    display: inline-block;
+    padding: 5px 3px;
+    font-size: 12px;
+    color: #444;
+}
+.foot_p1, .foot_p2{
+    font-size: 12px;    
+    padding-top: 15px;
+}
+.foot_p2{
+    padding-top: 10px !important;
+}
+
+.copy{
+    font-size: 12px;
+    font-weight: bold;
+    padding: 30px 0;
+}
+
+.f_logo{
+    position: absolute;
+    right: 0;top: 0;
+}
