--- a/css/reset.css
+++ b/css/reset.css
@@ -11,6 +11,6 @@ img{vertical-align: bottom;}
 table{border-collapse: collapse;}
 
 body{
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Times New Roman', "돋움", Times, serif;
     font-size: 14px;
 }
